; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_id.c_ID0login.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_id.c_ID0login.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.utmpx = type { i32, i32, i32, i32 }

@LogID0 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"pututxline(\22%.*s\22, \22%.*s\22, \22%.*s\22, \22%.*s\22)\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ID0login(%struct.utmpx* %0) #0 {
  %2 = alloca %struct.utmpx*, align 8
  store %struct.utmpx* %0, %struct.utmpx** %2, align 8
  %3 = call i32 (...) @ID0set0()
  %4 = load %struct.utmpx*, %struct.utmpx** %2, align 8
  %5 = call i32 @pututxline(%struct.utmpx* %4)
  %6 = load i32, i32* @LogID0, align 4
  %7 = load %struct.utmpx*, %struct.utmpx** %2, align 8
  %8 = getelementptr inbounds %struct.utmpx, %struct.utmpx* %7, i32 0, i32 3
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.utmpx*, %struct.utmpx** %2, align 8
  %11 = getelementptr inbounds %struct.utmpx, %struct.utmpx* %10, i32 0, i32 2
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.utmpx*, %struct.utmpx** %2, align 8
  %14 = getelementptr inbounds %struct.utmpx, %struct.utmpx* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.utmpx*, %struct.utmpx** %2, align 8
  %17 = getelementptr inbounds %struct.utmpx, %struct.utmpx* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @log_Printf(i32 %6, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i32 4, i32 %9, i32 4, i32 %12, i32 4, i32 %15, i32 4, i32 %18)
  %20 = call i32 (...) @ID0setuser()
  ret void
}

declare dso_local i32 @ID0set0(...) #1

declare dso_local i32 @pututxline(%struct.utmpx*) #1

declare dso_local i32 @log_Printf(i32, i8*, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @ID0setuser(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
